--- a/.github/workflows/weather.yml
+++ b/.github/workflows/weather.yml
@@ -3,23 +3,24 @@ name: Daily Weather to Supabase & Email
 on:
   schedule:
     # Runs at 8:00 AM EST daily
-    - cron: '0 13 * * *'
-  workflow_dispatch:
+    - cron: '0 13 * * *'  
+  workflow_dispatch:  
 
 jobs:
   run-daily:
     runs-on: ubuntu-latest
     steps:
-      - name: Check out the repo
+      - name: Check out the repository
         uses: actions/checkout@v3
 
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
-          python-version: '3.9'
+          python-version: '3.13' 
 
       - name: Install dependencies
         run: |
+          python -m pip install --upgrade pip
           pip install -r requirements.txt
 
       - name: Run weather script
@@ -31,5 +32,8 @@ jobs:
           EMAIL_USER: ${{ secrets.EMAIL_USER }}
           EMAIL_PASSWORD: ${{ secrets.EMAIL_PASSWORD }}
           TO_EMAIL: ${{ secrets.TO_EMAIL }}
+          LATITUDE: '40.7128'      
+          LONGITUDE: '-74.0060'   
+          CITY: 'New York'         
         run: |
           python weather_script.py
