--- a/.github/workflows/weather.yml
+++ b/.github/workflows/weather.yml
@@ -1,39 +1,39 @@
-name: Daily Weather to Supabase & Email
+# name: Daily Weather to Supabase & Email
 
-on:
-  schedule:
-    # Runs at 8:00 AM EST daily
-    - cron: '0 13 * * *'  
-  workflow_dispatch:  
+# on:
+#   schedule:
+#     # Runs at 8:00 AM EST daily
+#     - cron: '0 13 * * *'  
+#   workflow_dispatch:  
 
-jobs:
-  run-daily:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Check out the repository
-        uses: actions/checkout@v3
+# jobs:
+#   run-daily:
+#     runs-on: ubuntu-latest
+#     steps:
+#       - name: Check out the repository
+#         uses: actions/checkout@v3
 
-      - name: Set up Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: '3.13' 
+#       - name: Set up Python
+#         uses: actions/setup-python@v4
+#         with:
+#           python-version: '3.13' 
 
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
+#       - name: Install dependencies
+#         run: |
+#           python -m pip install --upgrade pip
+#           pip install -r requirements.txt
 
-      - name: Run weather script
-        env:
-          SUPABASE_URL: ${{ secrets.SUPABASE_URL }}
-          SUPABASE_KEY: ${{ secrets.SUPABASE_KEY }}
-          BASE_URL: ${{ secrets.BASE_URL }}
-          API_KEY: ${{ secrets.API_KEY }}
-          EMAIL_USER: ${{ secrets.EMAIL_USER }}
-          EMAIL_PASSWORD: ${{ secrets.EMAIL_PASSWORD }}
-          TO_EMAIL: ${{ secrets.TO_EMAIL }}
-          LATITUDE: '40.7128'      
-          LONGITUDE: '-74.0060'   
-          CITY: 'New York'         
-        run: |
-          python weather_script.py
+#       - name: Run weather script
+#         env:
+#           SUPABASE_URL: ${{ secrets.SUPABASE_URL }}
+#           SUPABASE_KEY: ${{ secrets.SUPABASE_KEY }}
+#           BASE_URL: ${{ secrets.BASE_URL }}
+#           API_KEY: ${{ secrets.API_KEY }}
+#           EMAIL_USER: ${{ secrets.EMAIL_USER }}
+#           EMAIL_PASSWORD: ${{ secrets.EMAIL_PASSWORD }}
+#           TO_EMAIL: ${{ secrets.TO_EMAIL }}
+#           LATITUDE: '40.7128'      
+#           LONGITUDE: '-74.0060'   
+#           CITY: 'New York'         
+#         run: |
+#           python weather_script.py
